--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -188,7 +188,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="61dp"
-        android:layout_marginTop="113dp"
+        android:layout_marginTop="59dp"
         android:layout_marginEnd="118dp"
         android:layout_marginBottom="5dp"
         android:text="Day"
@@ -196,7 +196,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toStartOf="@+id/textView6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/weekAverageTV"
@@ -204,7 +204,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="23dp"
         android:layout_marginEnd="130dp"
-        android:layout_marginBottom="160dp"
+        android:layout_marginBottom="156dp"
         android:text="TextView"
         android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/detailedViewBtn"
